--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
-    "midtrans-client": "^1.4.3"
+    "midtrans-client": "^1.4.3",
+    "multer": "^2.0.2"
   },
   "engines": {
-  "node": "18.x"
+    "node": "18.x"
   },
   "devDependencies": {
     "prisma": "^6.19.0"
